--- a/oatnguquocnguti.yaml
+++ b/oatnguquocnguti.yaml
@@ -6604,7 +6604,7 @@
 （南寧音）	鱘	xầm
 （廣州音）	𦅛	xầm
 （廣州音）	𩖰	xầm
-（通用版）	蕈	slún
+（通用版）	蕈	slấn
 （廣州音）	蕈	sún
 （廣州音）	蕈	thàm
 （廣州音）	蕈	xẫm
@@ -12566,7 +12566,7 @@
 （廣州音）	椯	đỏ
 （廣州音）	椽	oàn
 （廣州音）	椽	xoàn
-（台山音）	椽	ùn
+（台山音）	椽	oàn
 （欽州音）	椽	xiền
 （南寧音）	椽	xoàn
 （南寧音）	椽	(又)yoàn
@@ -26592,7 +26592,7 @@
 （南寧音）	袞	quẩn
 （廣州音）	裷	quẩn
 （台山音）	裷	kủn
-（台山音）	裷	ún
+（台山音）	裷	oán
 （廣州音）	輥	khuẩn
 （廣州音）	輥	quẩn
 （台山音）	輥	khũn
@@ -34997,7 +34997,7 @@
 （廣州音）	稴	yiềm
 （廣州音）	芫	oàn
 （廣州音）	芫	yiềm
-（台山音）	芫	ùn
+（台山音）	芫	oàn
 （欽州音）	芫	yiền
 （南寧音）	芫	(習)yiềm
 （南寧音）	芫	(書)yoàn
@@ -35253,14 +35253,14 @@
 （廣州音）	驠	yiến/yến
 （廣州音）	鴛	oan
 （廣州音）	鴛	yiên/yên
-（台山音）	鴛	ún
+（台山音）	鴛	oán
 （欽州音）	鴛	yiên
 （南寧音）	鴛	oan
 （廣州音）	㫃	yiển
 （廣州音）	䤷	yiển/yển
 （廣州音）	兗	yiển
 （廣州音）	兗	yiễn
-（台山音）	兗	ủn
+（台山音）	兗	oản
 （欽州音）	兗	yiển
 （南寧音）	兗	yiễn
 （廣州音）	匽	yiển/yển
@@ -38628,7 +38628,7 @@
 （廣州音）	䳒	oàn
 （廣州音）	䳣	oan
 （廣州音）	冤	oan
-（台山音）	冤	ún
+（台山音）	冤	oán
 （欽州音）	冤	yiên
 （南寧音）	冤	oan
 （廣州音）	剈	oan
@@ -38641,7 +38641,7 @@
 （廣州音）	宛	oản
 （廣州音）	宛	vổn
 （台山音）	宛	vỏn
-（台山音）	宛	ún
+（台山音）	宛	oán
 （欽州音）	宛	vổn
 （欽州音）	宛	yiển
 （南寧音）	宛	oan
@@ -38659,7 +38659,7 @@
 （南寧音）	涴	vó
 （南寧音）	涴	(語)võ
 （廣州音）	淵	oan
-（台山音）	淵	ún
+（台山音）	淵	oán
 （欽州音）	淵	yiên
 （南寧音）	淵	oan
 （廣州音）	渁	oan
@@ -38668,10 +38668,10 @@
 （南寧音）	渕	oan
 （廣州音）	灁	oan
 （廣州音）	眢	oan
-（台山音）	眢	ún
+（台山音）	眢	oán
 （南寧音）	眢	oan
 （廣州音）	箢	oan
-（台山音）	箢	ún
+（台山音）	箢	oán
 （南寧音）	箢	oan
 （廣州音）	肙	oan
 （廣州音）	葾	oan
@@ -38689,11 +38689,11 @@
 （廣州音）	駌	oan
 （廣州音）	鳶	oan
 （廣州音）	鳶	oàn
-（台山音）	鳶	ún
+（台山音）	鳶	oán
 （欽州音）	鳶	yiên
 （南寧音）	鳶	oan
 （廣州音）	鵷	oan
-（台山音）	鵷	ún
+（台山音）	鵷	oán
 （南寧音）	鵷	oan
 （廣州音）	鼘	oan
 （廣州音）	鼝	oan
@@ -38710,7 +38710,7 @@
 （廣州音）	䳃	oản
 （廣州音）	丸	oàn
 （廣州音）	丸	oản
-（台山音）	丸	ùn
+（台山音）	丸	oàn
 （欽州音）	丸	yiền
 （南寧音）	丸	yoàn
 （廣州音）	倇	oản
@@ -38735,7 +38735,7 @@
 （廣州音）	晼	vổn
 （廣州音）	烷	oàn
 （廣州音）	烷	oản
-（台山音）	烷	ùn
+（台山音）	烷	oàn
 （欽州音）	烷	yiền
 （南寧音）	烷	yoàn
 （廣州音）	琬	oản
@@ -38794,7 +38794,7 @@
 （廣州音）	䛄	oán
 （廣州音）	䬼	oán
 （廣州音）	怨	oán
-（台山音）	怨	ún
+（台山音）	怨	oán
 （欽州音）	怨	yiến
 （南寧音）	怨	yoán
 （廣州音）	惌	oán
@@ -38837,7 +38837,7 @@
 （南寧音）	允	vẫn
 （廣州音）	元	oàn
 （台山音）	元	ngùn
-（台山音）	元	ùn
+（台山音）	元	oàn
 （欽州音）	元	yiền
 （南寧音）	元	yoàn
 （廣州音）	円	oàn
@@ -38856,25 +38856,25 @@
 （廣州音）	員	vần
 （廣州音）	員	vận
 （台山音）	員	vún
-（台山音）	員	ùn
+（台山音）	員	oàn
 （欽州音）	員	yiền
 （南寧音）	員	yoàn
 （南寧音）	員	vần
 （南寧音）	員	vận
 （廣州音）	圎	oàn
 （廣州音）	園	oàn
-（台山音）	園	ùn
+（台山音）	園	oàn
 （欽州音）	園	yiền
 （南寧音）	園	yoàn
 （廣州音）	圓	oàn
-（台山音）	圓	ùn
-（台山音）	圓	ũn
+（台山音）	圓	oàn
+（台山音）	圓	oãn
 （欽州音）	圓	yiền
 （南寧音）	圓	yoàn
 （廣州音）	圜	oàn
 （廣州音）	圜	vàn
 （台山音）	圜	vàn
-（台山音）	圜	ùn
+（台山音）	圜	oàn
 （欽州音）	圜	vàn
 （欽州音）	圜	yiền
 （南寧音）	圜	yoàn
@@ -38892,19 +38892,19 @@
 （廣州音）	媛	oàn
 （廣州音）	媛	vồn
 （廣州音）	媛	yoạn
-（台山音）	媛	ùn
+（台山音）	媛	oàn
 （欽州音）	媛	vồn
 （欽州音）	媛	yiền
 （南寧音）	媛	yoàn
 （南寧音）	媛	yoạn
 （廣州音）	媴	oàn
-（台山音）	媴	ùn
+（台山音）	媴	oàn
 （廣州音）	嫄	oàn
 （台山音）	嫄	ngùn
 （欽州音）	嫄	yiền
 （南寧音）	嫄	yoàn
 （廣州音）	完	oàn
-（台山音）	完	ùn
+（台山音）	完	oàn
 （欽州音）	完	yiền
 （南寧音）	完	yoàn
 （廣州音）	寏	oàn
@@ -38912,7 +38912,7 @@
 （廣州音）	忨	oàn
 （廣州音）	忨	vộn
 （廣州音）	懸	oàn
-（台山音）	懸	ùn
+（台山音）	懸	oàn
 （欽州音）	懸	hiền
 （南寧音）	懸	yoàn
 （廣州音）	抏	oàn
@@ -38921,7 +38921,7 @@
 （廣州音）	援	oàn
 （廣州音）	援	vồn
 （廣州音）	援	yoạn
-（台山音）	援	ùn
+（台山音）	援	oàn
 （欽州音）	援	vồn
 （欽州音）	援	yiền
 （南寧音）	援	yoàn
@@ -38934,7 +38934,7 @@
 （廣州音）	榞	oàn
 （廣州音）	榬	oàn
 （廣州音）	櫞	oàn
-（台山音）	櫞	ùn
+（台山音）	櫞	oàn
 （南寧音）	櫞	yoàn
 （廣州音）	汍	oàn
 （廣州音）	沅	oàn
@@ -38942,7 +38942,7 @@
 （欽州音）	沅	yiền
 （南寧音）	沅	yoàn
 （廣州音）	沿	oàn
-（台山音）	沿	ùn
+（台山音）	沿	oàn
 （欽州音）	沿	yiền
 （南寧音）	沿	yoàn
 （廣州音）	洹	oàn
@@ -38952,7 +38952,7 @@
 （南寧音）	洹	vồn
 （廣州音）	湲	oàn
 （廣州音）	湲	vồn
-（台山音）	湲	ùn
+（台山音）	湲	oàn
 （南寧音）	湲	yoàn
 （廣州音）	源	oàn
 （台山音）	源	ngùn
@@ -38961,27 +38961,27 @@
 （廣州音）	溒	oàn
 （廣州音）	炫	oàn
 （廣州音）	炫	yoạn
-（台山音）	炫	ùn
+（台山音）	炫	oàn
 （欽州音）	炫	hiền
 （南寧音）	炫	(常)yoàn
 （南寧音）	炫	yoạn
 （廣州音）	爰	oàn
 （廣州音）	爰	vồn
-（台山音）	爰	ùn
+（台山音）	爰	oàn
 （欽州音）	爰	vồn
 （南寧音）	爰	yoàn
 （廣州音）	犉	oàn
 （廣州音）	犉	sùn
 （廣州音）	猨	oàn
-（台山音）	猨	ùn
+（台山音）	猨	oàn
 （廣州音）	猿	oàn
-（台山音）	猿	ùn
+（台山音）	猿	oàn
 （欽州音）	猿	yiền
 （南寧音）	猿	yoàn
 （廣州音）	獂	oàn
 （廣州音）	獂	vồn
 （廣州音）	玄	oàn
-（台山音）	玄	ùn
+（台山音）	玄	oàn
 （欽州音）	玄	hiền
 （南寧音）	玄	yoàn
 （廣州音）	玆	chi
@@ -38992,14 +38992,14 @@
 （廣州音）	眩	oàn
 （廣州音）	眩	vạn
 （廣州音）	眩	yoạn
-（台山音）	眩	ùn
+（台山音）	眩	oàn
 （欽州音）	眩	hiền
 （南寧音）	眩	(常)yoàn
 （南寧音）	眩	yoạn
 （廣州音）	笂	oàn
 （廣州音）	笎	oàn
 （廣州音）	紈	oàn
-（台山音）	紈	ùn
+（台山音）	紈	oàn
 （欽州音）	紈	yiền
 （南寧音）	紈	yoàn
 （廣州音）	綄	oàn
@@ -39009,14 +39009,14 @@
 （南寧音）	綄	vỗn
 （廣州音）	緣	oàn
 （廣州音）	緣	yoạn
-（台山音）	緣	ùn
+（台山音）	緣	oàn
 （欽州音）	緣	yiền
 （南寧音）	緣	yoàn
 （廣州音）	縁	oàn
 （廣州音）	羱	oàn
 （南寧音）	羱	yoàn
 （廣州音）	芄	oàn
-（台山音）	芄	ùn
+（台山音）	芄	oàn
 （南寧音）	芄	yoàn
 （廣州音）	蒝	oàn
 （廣州音）	蒝	vồn
@@ -39025,17 +39025,17 @@
 （台山音）	蚖	ngùn
 （廣州音）	蝝	oàn
 （廣州音）	蝯	oàn
-（台山音）	蝯	ùn
+（台山音）	蝯	oàn
 （廣州音）	螈	oàn
 （台山音）	螈	ngùn
 （欽州音）	螈	yiền
 （南寧音）	螈	yoàn
 （廣州音）	衒	oàn
 （廣州音）	衒	yoạn
-（台山音）	衒	ùn
+（台山音）	衒	oàn
 （南寧音）	衒	yoạn
 （廣州音）	袁	oàn
-（台山音）	袁	ùn
+（台山音）	袁	oàn
 （欽州音）	袁	yiền
 （南寧音）	袁	yoàn
 （廣州音）	褑	oàn
@@ -39045,7 +39045,7 @@
 （廣州音）	貟	oàn
 （廣州音）	貟	vận
 （廣州音）	轅	oàn
-（台山音）	轅	ùn
+（台山音）	轅	oàn
 （欽州音）	轅	yiền
 （南寧音）	轅	yoàn
 （廣州音）	邍	oàn
@@ -39053,11 +39053,11 @@
 （廣州音）	酛	oàn
 （廣州音）	釻	oàn
 （廣州音）	鈆	oàn
-（台山音）	鈆	ùn
+（台山音）	鈆	oàn
 （南寧音）	鈆	yoàn
 （廣州音）	鈨	oàn
 （廣州音）	鉛	oàn
-（台山音）	鉛	ùn
+（台山音）	鉛	oàn
 （欽州音）	鉛	yiền
 （南寧音）	鉛	yoàn
 （廣州音）	鎱	oàn
@@ -39069,13 +39069,13 @@
 （廣州音）	騵	oàn
 （南寧音）	騵	yoàn
 （廣州音）	魭	oàn
-（台山音）	魭	ùn
+（台山音）	魭	oàn
 （廣州音）	鶢	oàn
 （廣州音）	鶢	vồn
-（台山音）	鶢	ùn
+（台山音）	鶢	oàn
 （廣州音）	鶰	oàn
 （廣州音）	黿	oàn
-（台山音）	黿	ùn
+（台山音）	黿	oàn
 （欽州音）	黿	yiền
 （南寧音）	黿	yoàn
 （廣州音）	𠒑	oàn
@@ -39106,7 +39106,7 @@
 （廣州音）	愞	nọ
 （廣州音）	愞	oãn
 （廣州音）	泫	oãn
-（台山音）	泫	ùn
+（台山音）	泫	oàn
 （南寧音）	泫	yoãn
 （廣州音）	琄	oãn
 （廣州音）	琄	yoạn
@@ -39138,7 +39138,7 @@
 （廣州音）	遠	oãn
 （廣州音）	遠	yoạn
 （台山音）	遠	ụn
-（台山音）	遠	ủn
+（台山音）	遠	oản
 （欽州音）	遠	yiển
 （南寧音）	遠	yoãn
 （廣州音）	鉉	oãn
@@ -39171,7 +39171,7 @@
 （欽州音）	昡	yiền
 （南寧音）	昡	yoạn
 （廣州音）	瑗	yoạn
-（台山音）	瑗	ùn
+（台山音）	瑗	oàn
 （南寧音）	瑗	yoạn
 （廣州音）	県	yoạn
 （廣州音）	禐	yoạn
@@ -42876,7 +42876,7 @@
 （廣州音）	耬	lầu
 （台山音）	耬	lầu
 （南寧音）	耬	lầu
-（）	膢	lừ
+（通用版）	膢	lừ
 （通用版）	膢	lầu
 （廣州音）	膢	lùi
 （廣州音）	膢	lầu
@@ -43962,6 +43962,7 @@
 （欽州音）	崙	lần
 （南寧音）	崙	lần
 （南寧音）	崙	(老派)loàn
+（通用版）	嶙	lần
 （廣州音）	嶙	lùn
 （台山音）	嶙	lần
 （欽州音）	嶙	lần
@@ -43982,15 +43983,18 @@
 （欽州音）	淪	lần
 （南寧音）	淪	lần
 （南寧音）	淪	(老派)loàn
+（通用版）	潾	lần
 （廣州音）	潾	lùn
 （南寧音）	潾	lần
 （南寧音）	潾	(老派)loàn
+（通用版）	燐	lần
 （廣州音）	燐	lùn
 （台山音）	燐	lần
 （欽州音）	燐	lần
 （南寧音）	燐	lần
 （南寧音）	燐	(老派)loàn
 （廣州音）	獜	lùn
+（通用版）	璘	lần
 （廣州音）	璘	lùn
 （台山音）	璘	lần
 （欽州音）	璘	lần
@@ -43998,6 +44002,7 @@
 （南寧音）	璘	(老派)loàn
 （廣州音）	疄	lùn
 （廣州音）	疄	lụn
+（通用版）	瞵	lần
 （廣州音）	瞵	lùn
 （台山音）	瞵	lần
 （南寧音）	瞵	lần
@@ -44008,6 +44013,7 @@
 （南寧音）	碖	lẫn
 （南寧音）	碖	lận
 （廣州音）	磮	lùn
+（通用版）	磷	lần
 （廣州音）	磷	lình
 （廣州音）	磷	lùn
 （廣州音）	磷	lụn
@@ -44016,21 +44022,26 @@
 （欽州音）	磷	lần
 （南寧音）	磷	lần
 （南寧音）	磷	(老派)loàn
+（通用版）	粦	lần
 （廣州音）	粦	lùn
 （台山音）	粦	lần
 （欽州音）	粦	lần
+（通用版）	粼	lần
 （廣州音）	粼	lùn
 （台山音）	粼	lần
 （欽州音）	粼	lần
 （南寧音）	粼	lần
 （南寧音）	粼	(老派)loàn
+（通用版）	繗	lần
 （廣州音）	繗	lùn
 （南寧音）	繗	lần
 （南寧音）	繗	(老派)loàn
+（通用版）	翷	lần
 （廣州音）	翷	lùn
 （南寧音）	翷	lần
 （南寧音）	翷	(老派)loàn
 （廣州音）	腀	lùn
+（通用版）	膦	lần
 （廣州音）	膦	lùn
 （廣州音）	膦	lụn
 （台山音）	膦	lần
@@ -44059,12 +44070,14 @@
 （欽州音）	輪	lần
 （南寧音）	輪	lần
 （南寧音）	輪	(老派)loàn
+（通用版）	轔	lần
 （廣州音）	轔	lùn
 （廣州音）	轔	lụn
 （台山音）	轔	lần
 （欽州音）	轔	lần
 （南寧音）	轔	lần
 （南寧音）	轔	(老派)loàn
+（通用版）	遴	lần
 （廣州音）	遴	lùn
 （廣州音）	遴	lụn
 （台山音）	遴	lần
@@ -44072,29 +44085,35 @@
 （欽州音）	遴	lẩn
 （南寧音）	遴	lần
 （南寧音）	遴	(老派)loàn
+（通用版）	鄰	lần
 （廣州音）	鄰	lùn
 （台山音）	鄰	lần
 （欽州音）	鄰	lần
 （南寧音）	鄰	lần
 （南寧音）	鄰	(老派)loàn
+（通用版）	鏻	lần
 （廣州音）	鏻	lùn
 （台山音）	鏻	lần
 （南寧音）	鏻	lần
 （南寧音）	鏻	(老派)loàn
 （廣州音）	陯	lùn
 （廣州音）	陯	lụn
+（通用版）	隣	lần
 （廣州音）	隣	lùn
 （台山音）	隣	lần
+（通用版）	驎	lần
 （廣州音）	驎	lùn
 （南寧音）	驎	lần
 （南寧音）	驎	(老派)loàn
 （廣州音）	鯩	lùn
+（通用版）	鱗	lần
 （廣州音）	鱗	lùn
 （台山音）	鱗	lần
 （欽州音）	鱗	lần
 （南寧音）	鱗	lần
 （南寧音）	鱗	(老派)loàn
 （廣州音）	麐	lùn
+（通用版）	麟	lần
 （廣州音）	麟	lùn
 （台山音）	麟	lần
 （欽州音）	麟	lần
@@ -44158,6 +44177,7 @@
 （欽州音）	轥	lần
 （廣州音）	閵	lụn
 （廣州音）	𥣡	lụn
+（通用版）	栗	lật
 （廣州音）	栗	lụt
 （廣州音）	栗	lủt
 （台山音）	栗	lụt
@@ -44192,6 +44212,7 @@
 （廣州音）	䡃	lụt
 （廣州音）	䬆	lụt
 （廣州音）	侓	lụt
+（通用版）	傈	lật
 （廣州音）	傈	lụt
 （台山音）	傈	lụt
 （欽州音）	傈	lịch
@@ -44219,6 +44240,7 @@
 （南寧音）	慄	lật
 （南寧音）	慄	(老派)loạt
 （廣州音）	搮	lụt
+（通用版）	溧	lật
 （廣州音）	溧	lụt
 （台山音）	溧	lụt
 （欽州音）	溧	lịch
@@ -44230,6 +44252,7 @@
 （廣州音）	硉	lụt
 （南寧音）	硉	lật
 （廣州音）	箻	lụt
+（通用版）	篥	lật
 （廣州音）	篥	lụt
 （台山音）	篥	lụt
 （欽州音）	篥	lịch
@@ -55449,7 +55472,7 @@
 （南寧音）	綝	sâm
 （廣州音）	罙	sâm
 （廣州音）	罧	sâm
-（通用版）	芯	slún
+（通用版）	芯	slâm
 （廣州音）	芯	sâm
 （廣州音）	芯	sún
 （台山音）	芯	slấm
@@ -55619,7 +55642,7 @@
 （廣州音）	侁	sân
 （欽州音）	侁	sân
 （南寧音）	侁	slân
-（通用版）	信	slún
+（通用版）	信	slấn
 （廣州音）	信	sân
 （廣州音）	信	sún
 （台山音）	信	slấn
@@ -57041,7 +57064,7 @@
 （南寧音）	隼	(又)sloản
 （南寧音）	隼	chẩn
 （南寧音）	隼	(老派)choản
-（通用版）	㐰	slún
+（通用版）	㐰	slấn
 （廣州音）	㐰	sún
 （台山音）	㐰	slấn
 （廣州音）	㢲	sún
@@ -63900,7 +63923,7 @@
 （欽州音）	沄	vần
 （南寧音）	沄	vần
 （廣州音）	溳	vần
-（台山音）	溳	ùn
+（台山音）	溳	oàn
 （南寧音）	溳	vần
 （廣州音）	澐	vần
 （南寧音）	澐	vần
@@ -67614,7 +67637,7 @@
 （廣州音）	侭	chủn
 （欽州音）	侭	chần
 （欽州音）	侭	chẩn
-（通用版）	儘	tụn
+（通用版）	儘	tận
 （通用版）	儘	tủn
 （廣州音）	儘	chụn
 （廣州音）	儘	chủn
@@ -67634,14 +67657,14 @@
 （欽州音）	準	chẩn
 （南寧音）	準	chẩn
 （南寧音）	準	(老派)choản
-（通用版）	燼	tụn
+（通用版）	燼	tận
 （通用版）	燼	tủn
 （廣州音）	燼	chụn
 （廣州音）	燼	chủn
 （台山音）	燼	tận
 （欽州音）	燼	chần
 （南寧音）	燼	chận
-（通用版）	盡	tụn
+（通用版）	盡	tận
 （通用版）	盡	tủn
 （廣州音）	盡	chụn
 （廣州音）	盡	chủn
@@ -67651,7 +67674,7 @@
 （廣州音）	綧	chủn
 （南寧音）	綧	chẩn
 （南寧音）	綧	(老派)choản
-（通用版）	藎	tụn
+（通用版）	藎	tận
 （通用版）	藎	tủn
 （廣州音）	藎	chụn
 （廣州音）	藎	chủn
@@ -67734,7 +67757,7 @@
 （廣州音）	臸	chún
 （南寧音）	臸	chấn
 （南寧音）	臸	chi
-（通用版）	進	tún
+（通用版）	進	tấn
 （廣州音）	進	chún
 （台山音）	進	tấn
 （欽州音）	進	chấn
@@ -67769,7 +67792,7 @@
 （廣州音）	䀆	chụn
 （廣州音）	壗	chụn
 （廣州音）	嬧	chụn
-（通用版）	濜	tụn
+（通用版）	濜	tận
 （廣州音）	濜	chụn
 （台山音）	濜	tận
 （南寧音）	濜	chận
