--- a/oatnguquocnguti.yaml
+++ b/oatnguquocnguti.yaml
@@ -4964,7 +4964,7 @@
 （南寧音）	碴	cha
 （廣州音）	肞	xa
 （廣州音）	艖	xa
-（通用版）	苴	tui
+（通用版）	苴	tư
 （廣州音）	苴	chui
 （廣州音）	苴	chá
 （廣州音）	苴	chả
@@ -7164,6 +7164,7 @@
 （南寧音）	矁	xẩu
 （廣州音）	趣	xuc
 （廣州音）	趣	xui
+（通用版）	趣	xứ
 （廣州音）	趣	xúi
 （廣州音）	趣	xẩu
 （台山音）	趣	xúi
@@ -7564,7 +7565,7 @@
 （廣州音）	笡	xé
 （欽州音）	笡	xé
 （南寧音）	笡	xé
-（通用版）	趄	tui
+（通用版）	趄	tư
 （廣州音）	趄	chui
 （廣州音）	趄	xiết
 （廣州音）	趄	xui
@@ -7696,6 +7697,7 @@
 （廣州音）	哸	xui
 （廣州音）	嗺	xui
 （南寧音）	嗺	xôi
+（通用版）	坥	xư
 （廣州音）	坥	xui
 （南寧音）	坥	xư
 （廣州音）	墔	xui
@@ -7726,9 +7728,9 @@
 （廣州音）	榱	xui
 （台山音）	榱	xúi
 （南寧音）	榱	xôi
-（通用版）	沮	tui
-（通用版）	沮	túi
-（通用版）	沮	tủi
+（通用版）	沮	tư
+（通用版）	沮	tứ
+（通用版）	沮	tử
 （廣州音）	沮	chui
 （廣州音）	沮	chúi
 （廣州音）	沮	chụi
@@ -7763,7 +7765,7 @@
 （台山音）	璀	xúi
 （欽州音）	璀	xủi
 （南寧音）	璀	xôi
-（通用版）	疽	tui
+（通用版）	疽	tư
 （廣州音）	疽	chui
 （廣州音）	疽	xui
 （台山音）	疽	túi
@@ -7788,6 +7790,7 @@
 （欽州音）	脧	che
 （南寧音）	脧	chôi
 （南寧音）	脧	choan
+（通用版）	蛆	xư
 （廣州音）	蛆	chui
 （廣州音）	蛆	xui
 （台山音）	蛆	chúi
@@ -7808,9 +7811,11 @@
 （廣州音）	貙	xui
 （台山音）	貙	khúi
 （南寧音）	貙	xư
+（通用版）	趍	xư
 （廣州音）	趍	xui
 （南寧音）	趍	xì
 （南寧音）	趍	xư
+（通用版）	趨	xư
 （廣州音）	趨	xuc
 （廣州音）	趨	xui
 （台山音）	趨	xúi
@@ -7824,11 +7829,13 @@
 （廣州音）	㷃	xủi
 （廣州音）	䊫	xủi
 （廣州音）	䧽	xủi
+（通用版）	取	xử
 （廣州音）	取	xổ
 （廣州音）	取	xủi
 （台山音）	取	xủi
 （欽州音）	取	xỉ
 （南寧音）	取	xử
+（通用版）	娶	xử
 （廣州音）	娶	xúi
 （廣州音）	娶	xổ
 （廣州音）	娶	xủi
@@ -7943,9 +7950,11 @@
 （南寧音）	膵	xối
 （廣州音）	臎	xúi
 （廣州音）	襊	xúi
+（通用版）	覰	xứ
 （廣州音）	覰	xúi
 （台山音）	覰	húi
 （南寧音）	覰	xứ
+（通用版）	覷	xứ
 （廣州音）	覷	xúi
 （台山音）	覷	húi
 （欽州音）	覷	xí
@@ -11554,7 +11563,7 @@
 （台山音）	儲	trũi
 （欽州音）	儲	xì
 （南寧音）	儲	xừ
-（通用版）	聚	tụi
+（通用版）	聚	tự
 （廣州音）	聚	chụi
 （廣州音）	聚	xỗ
 （台山音）	聚	tụi
@@ -56594,7 +56603,7 @@
 （欽州音）	眭	slui
 （南寧音）	眭	khùy
 （南寧音）	眭	slôi
-（通用版）	稰	slủi
+（通用版）	稰	slử
 （廣州音）	稰	sui
 （廣州音）	稰	sủi
 （台山音）	稰	slúi
@@ -56607,7 +56616,7 @@
 （廣州音）	緰	sui
 （廣州音）	緰	thầu
 （廣州音）	縃	sui
-（通用版）	胥	slui
+（通用版）	胥	slư
 （廣州音）	胥	sui
 （台山音）	胥	slúi
 （欽州音）	胥	sli
@@ -56619,7 +56628,7 @@
 （南寧音）	葰	chấn
 （廣州音）	蕦	sui
 （廣州音）	蝑	sui
-（通用版）	諝	slủi
+（通用版）	諝	slử
 （廣州音）	諝	sui
 （廣州音）	諝	sủi
 （台山音）	諝	slúi
@@ -56631,13 +56640,13 @@
 （欽州音）	雖	slui
 （南寧音）	雖	slôi
 （南寧音）	雖	(又)slư
-（通用版）	需	slui
+（通用版）	需	slư
 （廣州音）	需	sui
 （台山音）	需	slúi
 （欽州音）	需	sli
 （南寧音）	需	slư
 （廣州音）	鞖	sui
-（通用版）	須	slui
+（通用版）	須	slư
 （廣州音）	須	sui
 （台山音）	須	slúi
 （欽州音）	須	sli
@@ -56658,7 +56667,7 @@
 （廣州音）	氺	sủi
 （廣州音）	盨	sỏ
 （廣州音）	盨	sủi
-（通用版）	糈	slủi
+（通用版）	糈	slử
 （廣州音）	糈	sủi
 （台山音）	糈	slúi
 （南寧音）	糈	slử
@@ -56669,7 +56678,7 @@
 （台山音）	誰	sủi
 （欽州音）	誰	sùi
 （南寧音）	誰	sồi
-（通用版）	醑	slủi
+（通用版）	醑	slử
 （廣州音）	醑	sủi
 （台山音）	醑	slúi
 （南寧音）	醑	slử
@@ -56742,7 +56751,7 @@
 （台山音）	粹	slụi
 （欽州音）	粹	xúi
 （南寧音）	粹	xối
-（通用版）	絮	slụi
+（通用版）	絮	slự
 （廣州音）	絮	súi
 （廣州音）	絮	sũi
 （廣州音）	絮	sụi
@@ -56812,7 +56821,7 @@
 （廣州音）	瀡	sừa
 （欽州音）	瀡	slùi
 （南寧音）	瀡	sổi
-（通用版）	緒	slũi
+（通用版）	緒	slữ
 （廣州音）	緒	sũi
 （台山音）	緒	slũi
 （欽州音）	緒	slí
@@ -66825,7 +66834,7 @@
 （廣州音）	赱	chẩu
 （通用版）	酒	tửu
 （廣州音）	酒	chẩu
-（台山音）	酒	tửu
+（台山音）	酒	tủiu
 （欽州音）	酒	chẩu
 （南寧音）	酒	chẩu
 （廣州音）	鯐	chẩu
@@ -67310,21 +67319,21 @@
 （南寧音）	岨	chư
 （南寧音）	岨	chử
 （廣州音）	樶	chui
-（通用版）	狙	tui
+（通用版）	狙	tư
 （廣州音）	狙	chui
 （台山音）	狙	túi
 （台山音）	狙	tủi
 （欽州音）	狙	chui
 （欽州音）	狙	chỏ
 （南寧音）	狙	chư
-（通用版）	菹	tui
+（通用版）	菹	tư
 （廣州音）	菹	chui
 （台山音）	菹	chúi
 （台山音）	菹	túi
 （南寧音）	菹	chư
 （廣州音）	葅	chui
 （南寧音）	葅	chư
-（通用版）	跙	tui
+（通用版）	跙	tư
 （廣州音）	跙	chui
 （台山音）	跙	trẻ
 （台山音）	跙	túi
@@ -67353,7 +67362,7 @@
 （廣州音）	㭰	chủi
 （廣州音）	䃊	chủi
 （廣州音）	䶥	chủi
-（通用版）	咀	tủi
+（通用版）	咀	tử
 （廣州音）	咀	chó
 （廣州音）	咀	chủi
 （台山音）	咀	tủi
@@ -67384,8 +67393,8 @@
 （南寧音）	觜	chi
 （南寧音）	觜	chổi
 （南寧音）	觜	(老派)chu
-（通用版）	齟	tụi
-（通用版）	齟	tủi
+（通用版）	齟	tự
+（通用版）	齟	tự
 （廣州音）	齟	chụi
 （廣州音）	齟	chủi
 （台山音）	齟	túi
@@ -67498,14 +67507,14 @@
 （台山音）	墜	chụi
 （欽州音）	墜	chùi
 （南寧音）	墜	chội
-（通用版）	序	tụi
+（通用版）	序	tự
 （廣州音）	序	chụi
 （台山音）	序	tụi
 （欽州音）	序	chùi
 （南寧音）	序	chự
 （廣州音）	敍	chụi
 （南寧音）	敍	chự
-（通用版）	敘	tụi
+（通用版）	敘	tự
 （廣州音）	敘	chụi
 （台山音）	敘	tụi
 （欽州音）	敘	chùi
@@ -67513,7 +67522,7 @@
 （廣州音）	檌	chụi
 （廣州音）	汿	chụi
 （廣州音）	沀	chụi
-（通用版）	漵	tụi
+（通用版）	漵	tự
 （廣州音）	漵	chụi
 （台山音）	漵	tụi
 （欽州音）	漵	chùi
